<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        />

    <RelativeLayout
        android:id="@+id/layerlogin"
        android:layout_width="422dp"
        android:layout_height="441dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="100dp"
        android:background="@drawable/bg_login">


        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="420dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_login_head">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="29dp"
                android:gravity="left|center_vertical"
                android:textSize="22dp"
                android:textColor="@color/white"
                android:text="@string/login_title"
                />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/name"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:layout_below="@+id/header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:background="@drawable/bg_login_edit">

            <EditText
                android:id="@+id/etxt_name"
                android:layout_width="296dp"
                android:layout_height="50dp"
                android:layout_toLeftOf="@+id/img_name"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:hint="@string/login_hit_user"
                android:maxLines="1"
                android:textColor="@color/textclolr_title_gray"
                android:textColorHint="@color/textclolr_title_hit"
                android:textSize="17dp" />

            <ImageView
                android:id="@+id/img_name"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="17dp"
                android:src="@drawable/username"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:background="@drawable/bg_login_edit">

            <EditText
                android:id="@+id/etxt_password"
                android:layout_width="296dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:layout_toLeftOf="@+id/img_password"
                android:hint="@string/login_hit_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/textclolr_title_gray"
                android:textColorHint="@color/textclolr_title_hit"
                android:textSize="17dp" />

            <ImageView
                android:id="@+id/img_password"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="17dp"
                android:src="@drawable/password"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/check"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:background="#00000000">

            <RelativeLayout
                android:id="@+id/check1"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true">

                <CheckBox
                    android:id="@+id/check_name_save"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:text="@string/login_check_save_name"
                    android:textColor="@color/textclolr_title_gray"
                    android:textSize="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/check2"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/check1">

                <CheckBox
                    android:id="@+id/check_password_save"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:text="@string/login_check_save_password"
                    android:textColor="@color/textclolr_title_gray"
                    android:textSize="14dp" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:layout_below="@+id/check"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:background="@drawable/btn_red"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="24dp"
            android:text="@string/login_btn_login"
            android:textColor="#ffffff" />

        <RelativeLayout
            android:id="@+id/buttom"
            android:layout_width="420dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="1dp"
            android:background="@drawable/bg_login_buttom">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="#00000000">

                <TextView
                    android:id="@+id/setting1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/login_network"
                    android:textSize="16dp"
                    android:textColor="@color/textclolr_title_gray" />

                <TextView
                    android:id="@+id/setting2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/setting1"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/login_setting"
                    android:textSize="16dp"
                    android:textColor="#ff0000" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/versioncode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="#00000000"
        android:gravity="center_vertical|center_horizontal"
        android:text=""
        android:textSize="16dp"
        android:textColor="#000000" />

</RelativeLayout>
