<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >


    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/teb_head_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/textclolr_title_blcak"
            android:textSize="16dp"
            android:text="@string/setting_title_system_head"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#f5f5f6"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_version"
        android:layout_width="match_parent"
        android:layout_below="@+id/head"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/txtname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/textclolr_title_gray"
            android:text="@string/setting_title_system_version"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/valueversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/textclolr_title_gray"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#f5f5f6"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_below="@+id/btn_version"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/newtxtname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/textclolr_title_gray"
            android:text="@string/setting_title_system_version_new"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/newimgarray"
            android:layout_width="10dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right"
            />

        <TextView
            android:id="@+id/valuenew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/newimgarray"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/setting_title_system_version_none"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/textclolr_title_gray"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#f5f5f6"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_updata"
        android:layout_width="match_parent"
        android:layout_below="@+id/btn_check"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/updatatxtname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/textclolr_title_gray"
            android:text="@string/setting_title_system_latest"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/updataimgarray"
            android:layout_width="10dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right"
            android:visibility="invisible"
            />

        <ProgressBar
            android:id="@+id/seekbar_sys_audio_level"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/updatatxtname"
            android:max="1000"
            android:maxHeight="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:progressDrawable="@drawable/shape_seek_progress_bg"
            android:visibility="invisible"
            android:thumbOffset="5dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#f5f5f6"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_safe"
        android:layout_width="match_parent"
        android:layout_below="@+id/btn_updata"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/safetxtname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/textclolr_title_gray"
            android:text="@string/setting_title_system_safe_new"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/safeimgarray"
            android:layout_width="10dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#f5f5f6"/>
    </RelativeLayout>
</RelativeLayout>
